# netMusic

./: .gitignore  build.bat  debuggerDllInject.bat  start.bat
AppStart/: AppStart.sln
AppStart/AppStart/: AppStart.csproj  Program.cs
Backend/: NetMusicPlugin.sln
Backend/NetMusicPlugin/: ElementTool.cs  ReadFile.cs  TestMain.cs  WebSocket.cs
ConsoleApp1/: NetMusicPlugin.sln
ConsoleApp1/NetMusicPlugin/: NetMusicPlugin.csproj  ReadFile.cs  WebSocket.cs
DllInjector/: DllInjector.sln
DllInjector/DllInjector/: DllInjector.cpp  DllInjector.vcxproj
RustInjector/: README.md
RustInjector/better-ncm/: Cargo.toml
RustInjector/better-ncm/resource/core/: eapi-shark.js  ipc-hook.js
RustInjector/better-ncm/src/: hook.rs  server.rs
RustInjector/better-ncm/src/server/: handler.rs
RustInjector/front-bundle/: getLrc.js  index.js  orderSong.js  package.json  style-script.js  util.js  webpack.config.js
customComponents/message/: index.html  index.js  package.json  webpack.config.js
customComponents/switch/: index.js  index.scss  (+2 more)
msimg32/: App.cpp  App.h  CMakeLists.txt  dll.asm  dllmain.cpp  msimg32.sln  msimg32.vcxproj  msimg32.vcxproj.filters  packages.config  pch.h  utils.cpp  utils.h
netMusicFront/: New Document.tldr.js  components.d.ts  index.html  package.json  unocss.config.ts  vite.config.ts
nodeMiddleware/: communicateMiddleware.js  config.json  dannmuku.js  index.js  localFileDatabase.js  log.js  loginConstant.js  lyricAndStatic.js  orderSong.js  package-lock.json  package.json
release/: install.bat  start.bat  stop.bat
switch/: index.scss
(+70 files in other folders)
